data/derived/comb/progs/unify/prog6939.ml.out
Characters 46-56:
  let rec funt = fun x -> (funt (f b), f b = b) in
                           ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * 'b
